syntax = "proto3";

package installs.v1;

import "installs/v1/account_settings.proto";
import "installs/v1/runner_type.proto";
import "installs/v1/sandbox_settings.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/installs/v1";

// ProvisionRequest: provision a nuon sandbox and runner
message ProvisionRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string install_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string run_id = 4 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  AccountSettings account_settings = 5;
  SandboxSettings sandbox_settings = 6;

  bool plan_only = 7;
  RunnerType runner_type = 8;
}

// StartResponse returns the response from a deployment workflow
message ProvisionResponse {}
